[gd_scene load_steps=6 format=3 uid="uid://cfyj20c0bej3r"]

[ext_resource type="Script" uid="uid://dwscnkbfqxnql" path="res://addons/Imposter/imposter/scripts/single_bake.gd" id="1_0ba82"]
[ext_resource type="Texture2D" uid="uid://dsq0fpt5c8ic7" path="res://addons/Imposter/icons/fold.svg" id="2_uj55j"]
[ext_resource type="Texture2D" uid="uid://vexri24bb4xr" path="res://addons/Imposter/icons/fold_selected.svg" id="3_lu3jy"]

[sub_resource type="Environment" id="Environment_6wwrl"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ssil_enabled = true

[sub_resource type="World3D" id="World3D_flfsy"]
environment = SubResource("Environment_6wwrl")

[node name="single" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.5
offset_top = -273.5
offset_right = 392.5
offset_bottom = 273.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_0ba82")
metadata/_custom_type_script = "uid://dwscnkbfqxnql"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="Selects" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="VBoxContainer" parent="HSplitContainer/Selects"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="FileName" type="HBoxContainer" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/Selects/GridContainer/FileName"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "set file name"

[node name="SaveDir" type="HBoxContainer" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/Selects/GridContainer/SaveDir"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Select save dir"
clear_button_enabled = true

[node name="SaveBut" type="TextureButton" parent="HSplitContainer/Selects/GridContainer/SaveDir"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("2_uj55j")
texture_pressed = ExtResource("3_lu3jy")
ignore_texture_size = true
stretch_mode = 5

[node name="FullSphereBut" type="CheckButton" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2
text = "full sphere"

[node name="ShadowBut" type="CheckButton" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2
text = "create shadow mesh"

[node name="FramesSize" type="HBoxContainer" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Selects/GridContainer/FramesSize"]
layout_mode = 2
text = "frames size"

[node name="FrameSpin" type="SpinBox" parent="HSplitContainer/Selects/GridContainer/FramesSize"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 4.0
max_value = 64.0
value = 16.0

[node name="Resolution" type="HBoxContainer" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Selects/GridContainer/Resolution"]
layout_mode = 2
text = "set resolution"

[node name="ResolutionSpin" type="SpinBox" parent="HSplitContainer/Selects/GridContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 512.0
max_value = 8192.0
value = 1024.0

[node name="Dilatate" type="HBoxContainer" parent="HSplitContainer/Selects/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Selects/GridContainer/Dilatate"]
layout_mode = 2
text = "dilatate bake distance"

[node name="SpinBox" type="SpinBox" parent="HSplitContainer/Selects/GridContainer/Dilatate"]
layout_mode = 2
size_flags_horizontal = 10
max_value = 64.0
value = 32.0

[node name="PreviewNodes" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PreviewNodes"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="HSplitContainer/PreviewNodes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Generate" type="Button" parent="HSplitContainer/PreviewNodes/HBoxContainer"]
layout_mode = 2
text = "generate"

[node name="Preview" type="ScrollContainer" parent="HSplitContainer/PreviewNodes"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="HSplitContainer/PreviewNodes/Preview"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PreviewScenes" type="SubViewportContainer" parent="HSplitContainer/PreviewNodes/Preview/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Viewport" type="SubViewport" parent="HSplitContainer/PreviewNodes/Preview/BoxContainer/PreviewScenes"]
world_3d = SubResource("World3D_flfsy")
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 4
size = Vector2i(800, 600)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 4
size = Vector2i(200, 150)
dialog_text = "Please select 3d node"

[connection signal="text_changed" from="HSplitContainer/Selects/GridContainer/FileName/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="HSplitContainer/Selects/GridContainer/FileName/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HSplitContainer/Selects/GridContainer/SaveDir/SaveBut" to="." method="_on_save_but_pressed"]
[connection signal="toggled" from="HSplitContainer/Selects/GridContainer/FullSphereBut" to="." method="_on_full_sphere_but_toggled"]
[connection signal="toggled" from="HSplitContainer/Selects/GridContainer/ShadowBut" to="." method="_on_shadow_but_toggled"]
[connection signal="value_changed" from="HSplitContainer/Selects/GridContainer/FramesSize/FrameSpin" to="." method="_on_frame_spin_value_changed"]
[connection signal="value_changed" from="HSplitContainer/Selects/GridContainer/Resolution/ResolutionSpin" to="." method="_on_resolution_spin_value_changed"]
[connection signal="value_changed" from="HSplitContainer/Selects/GridContainer/Dilatate/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="HSplitContainer/PreviewNodes/HBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
